css/frontend/variation_high_contrast.css
/* ... */
/**
 * RTL Styles
 */
.rtl {

	.pmpro_form_field-password-toggle {
		padding: 0 0 0 var(--pmpro--base--spacing--small);
	}

}

/**
 * Print Styles
 */
@media print {
	.pmpro {
		font-size: 12pt;

		.pmpro_section {
			margin: var(--pmpro--base--spacing--medium) 0;
		}

		.pmpro_card_title {
			padding: var(--pmpro--base--spacing--small) var(--pmpro--base--spacing--small) 0;
		}

		.pmpro_card_content {
			padding: var(--pmpro--base--spacing--small) var(--pmpro--base--spacing--small) var(--pmpro--base--spacing--small);
		}

		.pmpro_section:has(.pmpro_form) .pmpro_card_content {
			padding-top: var(--pmpro--base--spacing--small);
		}

		.pmpro_font-x-large {
			font-size: 18pt;
		}

		.pmpro_font-large {
			font-size: 14pt;
		}

		.pmpro_font-medium {
			font-size: 14pt;
		}

	}
}

/**
 * Responsive Styles
 */
@media screen and (max-width: 767px) {
	.pmpro {

		#pmpro_order_single {

			.pmpro_table {

				thead th:not(th:first-of-type),
				tbody td,
				tfoot td {
					text-align: left;
				}

				tbody tr:first-child th {
					display: block;
				}

				tbody tr:first-child th:before {
					display: none;
				}

				tfoot td:first-of-type {
					display: none;
				}
			}

		}

		.pmpro_table_cancel tbody tr td,
		.pmpro_table_cancel tbody tr:first-child th {
			border-width: 0;
			padding-top: 0;
		}

		.pmpro_cols-2,
		.pmpro_cols-3 {
			display: flex;
			flex-direction: column;
			gap: var(--pmpro--base--spacing--medium);
		}

		.pmpro_cols-2 > *,
		.pmpro_cols-3 > * {
			width: auto;
		}

	}

}

